src/style.scss
// Colors

$dusty-gray: #999;
$gallery: #eeeeee;
$alto: #ddd;
$bittersweet: #ff6f69;
$buttermilk: rgba(255, 238, 173, 0.4);
$vista-blue: #42b983;
$pink: rgba(255, 182, 193, 0.3);
$pickled-bluewood: #35495e;

$calendar-border: 1px solid $alto;

@mixin calendar-row {
  display: flex;
  justify-content: flex-start;
  width: 100%;
}

@mixin calendar-cell {
  width: 100%;
  padding: 0.5rem;
}

@font-face {
  font-family: 'Muli';
  src: url('~./assets/Muli-Light.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Muli';
  src: url('~./assets/Muli-Regular.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

body {
  font-family: 'Muli', Helvetica, Arial, sans-serif;
  color: $pickled-bluewood;
  padding-bottom: 2rem;

  display: flex;
  justify-content: center;


  // Test
  background-color: $gallery;

  #app {
    display: block !important;
    flex-basis: 1000px;

    #header {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: flex-end;

      div:first-child {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 1rem 0;
        img {
          width: 50px;
          height: 50px;
        }
        h1 {
          margin: 0 0 0 0.5rem;
          color: $pickled-bluewood;
          padding-top: 7px;
        }
      }

      div:last-child {
        font-weight: bold;
        .date {
          width: 130px;
          text-align: center;
        }
        button {
          color: $dusty-gray;
          font-size: 1rem;
          padding: 0;
          width: 20px;
          background-color: white;
          user-select: none;
          border: 1px solid $alto;
          border-radius: 2px;
          margin-left: 0.25rem;
          &:focus {
            outline: none;
          }
          &:hover {
            color: $pickled-bluewood;
            box-shadow: 0 2px 2px $alto;
          }
        }
      }
    }

    #day-bar {
      @include calendar-row;
      div {
        @include calendar-cell;
      }
    }

    #calendar {
      background-color: white;
      padding: 15px;
      .calendar-week {
        @include calendar-row;
        .day {
          overflow: hidden;
          font-weight: bold;
          @include calendar-cell;
          height: 100px;
          user-select: none;
          cursor: default;
          border-left: $calendar-border;
          border-top: $calendar-border;

          &:last-child {
            border-right: $calendar-border;
          }

          &.past {
            opacity: 0.6;
          }

          &.not-current-month {
            color: $alto;
          }

          &.today {
            background-color: $buttermilk;
          }

          &.active {
            background-color: $pink;
          }

          .event-list {
            font-size: 0.8rem;
            color: $vista-blue;
            font-weight: bold;
            list-style: none;
            padding: 0;
            margin: 0.5rem 0 0.5rem 0;

            li {
              white-space: nowrap;
            }
          }
        }


        .day {


        }
        &:last-child {
          .day {
            border-bottom: $calendar-border;
          }
        }
      }
    }

    $event-form-width: 300px;

    #event-form {

      display: none;
      box-shadow: 0 2px 4px $alto;
      position: fixed;
      width: $event-form-width;
      transform: translate(-50%, -100%);
      z-index: 10;
      padding: 1rem;
      background-color: white;
      border: 1px $alto solid;

      &.active {
        display: flex;
      }

      flex-direction: column;
      align-content: space-between;


      h4 {
        margin: 0 0 0.75rem 0;
        color: $dusty-gray;
        font-weight: normal;
        font-size: 1.15rem;
      }

      p {
        font-size: 0.85rem;
        margin: 0 0 0.85rem 0;
      }


      & > * {
        width: 100%
      }
      .text {
        input[type='text'] {
          width: calc(100% - 0.75rem);
          padding: 0.25rem;
          font-size: 0.75rem;
        }
        margin-bottom: 0.75rem;
      }
      .buttons {
        text-align: right;
        button {
          $button-col: $pickled-bluewood;
          padding: 0.5rem;
          background-color: $button-col;
          border: 1px solid darken($button-col, 5%);
          font-weight: bold;
          border-radius: 2px;
          color: white;
          &:focus  {
            outline: none;
          }
          &:hover {
            background-color: lighten($button-col, 4%);
            border: 1px solid $button-col;
          }
        }
      }
      #close-button {
        margin: 0;
        padding: 0;
        font-size: 1.25rem;
        background-color: white;
        position: absolute;
        border: none;
        width: 20px;
        font-weight: bold;
        color: #666;
        right: 0.6rem;
        top: 0.6rem;
        cursor: pointer;
        &:focus  {
          outline: none;
        }
      }
    }

  }
}

